<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.basistech.m2e-code-quality</groupId>
    <artifactId>m2e-code-quality-plugins</artifactId>
    <version>1.1.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <scm>
        <connection>scm:git:git://github.com/m2e-code-quality/m2e-code-quality.git</connection>
        <url>scm:git:git://github.com/m2e-code-quality/m2e-code-quality.git</url>
    </scm>

    <properties>
        <target.platform>oxygen</target.platform>

        <tycho-version>1.7.0</tycho-version>
        <orbit.version>R20160221192158</orbit.version>
        <main.basedir>${basedir}</main.basedir>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>

        <updatesite.m2e>http://download.eclipse.org/technology/m2e/releases</updatesite.m2e>
        <updatesite.eclipse>http://download.eclipse.org/releases/photon</updatesite.eclipse>
        <updatesite.cs>http://eclipse-cs.sf.net/update</updatesite.cs>
        <updatesite.pmd>https://pmd.github.io/pmd-eclipse-plugin-p2-site/</updatesite.pmd>
        <updatesite.findbugs>http://findbugs.cs.umd.edu/eclipse/</updatesite.findbugs>
        <updatesite.spotbugs>https://spotbugs.github.io/eclipse/</updatesite.spotbugs>
        <updatesite.orbit>http://download.eclipse.org/tools/orbit/downloads/drops/${orbit.version}/repository/</updatesite.orbit>
    </properties>

    <modules>
        <module>com.basistech.m2e.code.quality.shared</module>
        <module>com.basistech.m2e.code.quality.shared.test</module>
        <module>com.basistech.m2e.code.quality.checkstyle</module>
        <module>com.basistech.m2e.code.quality.checkstyle.feature</module>
        <module>com.basistech.m2e.code.quality.checkstyle.test</module>
        <module>com.basistech.m2e.code.quality.findbugs</module>
        <module>com.basistech.m2e.code.quality.findbugs.feature</module>
        <module>com.basistech.m2e.code.quality.findbugs.test</module>
        <module>com.basistech.m2e.code.quality.spotbugs</module>
        <module>com.basistech.m2e.code.quality.spotbugs.feature</module>
        <module>com.basistech.m2e.code.quality.spotbugs.test</module>
        <module>com.basistech.m2e.code.quality.pmd</module>
        <module>com.basistech.m2e.code.quality.pmd.feature</module>
        <module>com.basistech.m2e.code.quality.site</module>
        <module>oxygen</module>
        <module>neon</module>
        <module>mars</module>
        <module>photon</module>
    </modules>

    <repositories>
        <repository>
            <id>m2e</id>
            <layout>p2</layout>
            <url>${updatesite.m2e}</url>
        </repository>
        <repository>
            <id>eclipse</id>
            <layout>p2</layout>
            <url>${updatesite.eclipse}</url>
        </repository>
        <repository>
            <id>cs</id>
            <layout>p2</layout>
            <url>${updatesite.cs}</url>
        </repository>
        <repository>
            <id>pmd</id>
            <layout>p2</layout>
            <url>${updatesite.pmd}</url>
        </repository>
        <repository>
            <id>findbugs</id>
            <layout>p2</layout>
            <url>${updatesite.findbugs}</url>
        </repository>
        <repository>
            <id>spotbugs</id>
            <layout>p2</layout>
            <url>${updatesite.spotbugs}</url>
        </repository>
        <repository>
            <id>orbit</id>
            <layout>p2</layout>
            <url>${updatesite.orbit}</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>sonatype-public</id>
            <url>https://repository.sonatype.org/content/groups/sonatype-public-grid</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>${target.platform}</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>
                    <resolver>p2</resolver>
                    <pomDependencies>consider</pomDependencies>
                    <ignoreTychoRepositories>true</ignoreTychoRepositories>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.2.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>spotbugs</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <!-- workaround for TYCHO-349 or TYCHO-313 -->
                        <strictVersions>false</strictVersions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-surefire-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <useUIHarness>true</useUIHarness>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                        <argLine>${tycho.test.jvmArgs}</argLine>
                        <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>target-platform-configuration</artifactId>
                    <version>${tycho-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-versions-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <updateVersionRangeMatchingBounds>true</updateVersionRangeMatchingBounds>
                    </configuration>
                </plugin>

                <!-- important for self-hosting -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>sun-jvm</id>
            <activation>
                <property>
                    <name>java.vendor.url</name>
                    <value>http://java.sun.com/</value>
                </property>
            </activation>
            <properties>
                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m]]></tycho.test.jvmArgs>
            </properties>
        </profile>
        <profile>
            <id>osx</id>
            <activation>
                <property>
                    <name>java.vendor.url</name>
                    <value>http://www.apple.com/</value>
                </property>
            </activation>
            <properties>
                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread]]></tycho.test.jvmArgs>
                <osgi.ws>cocoa</osgi.ws>
            </properties>
        </profile>
        <profile>
            <id>sign</id>
            <activation>
                <property>
                    <name>jarsigner.alias</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>local-findbugs-p2</id>
            <activation>
                <file>
                    <exists>../com.basistech.m2e.code.quality.findbugs/findbugs.p2/content.xml</exists>
                </file>
            </activation>
            <repositories>
                <repository>
                    <id>findbugs</id>
                    <layout>p2</layout>
                    <url>file:${project.basedir}/../com.basistech.m2e.code.quality.findbugs/findbugs.p2</url>
                </repository>
            </repositories>
        </profile>
        <profile>
            <id>local-spotbugs-p2</id>
            <activation>
                <file>
                    <exists>../com.basistech.m2e.code.quality.spotbugs/spotbugs.p2/content.xml</exists>
                </file>
            </activation>
            <repositories>
                <repository>
                    <id>spotbugs</id>
                    <layout>p2</layout>
                    <url>file:${project.basedir}/../com.basistech.m2e.code.quality.spotbugs/spotbugs.p2</url>
                </repository>
            </repositories>
        </profile>
    </profiles>

</project>
